--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <label for="pesan" class="form-label">pesan</label>
               <textarea class="form-control" id="pesan" rows="2"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Kirim</button>
+            <button type="submit" class="btn btn-success">Kirim</button>
           </form>
         </div>
       </div>
