--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
   <!-- Jumbo tron -->
   <section class="jumbotron text-center">
-    <img src="img/ardi.jpeg" alt="Ardi Supardi" width="200" class="rounded-circle img-thumbnail" />
-    <h1 class="display-5">Ardi Supardi</h1>
+    <img src="img/Ardi.jpeg" alt="Ardi Supardi" width="200" class="rounded-circle img-thumbnail" />
+    <h1 class="display-4">Ardi Supardi</h1>
     <p class="lead">Graphic Design | Manipulation</p>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#ffffff" fill-opacity="1"
